sqyards/templates/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sqyards-api
  name: sqyards-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqyards-api
  template:
    metadata:
      labels:
        app: sqyards-api
    spec:
      containers:
      - image: nginx
        name: sq-api
        ports:
          - containerPort: 8081
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        volumeMounts:
        - name: api-config
          mountPath: /docker/config
        - name: api-secret
          mountPath: /secret
          readOnly: true
      volumes:
      - name: api-config
        configMap:
          name: api-conf
      - name: api-secret
        secret:
          secretName: docker-pull-secret
