sqyards/templates/fe-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sqyards-fe
  name: sqyards-fe
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: sqyards-fe
  template:
    metadata:
      labels:
        app: sqyards-fe
    spec:
      containers:
      - image: nginx
        name: sq-fe
        ports:
          - containerPort: 8888
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        volumeMounts:
        - name: fe-config
          mountPath: /config
        - name: fe-secret
          mountPath: /secret
          readOnly: true

      volumes:
      - name: fe-config
        configMap:
          name: api-conf
      - name: fe-secret
        secret:
          secretName: docker-pull-secret
