sqyards/templates/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sqyards-api
  name: sqyards-api
spec:
  ports:
  - name: 8081-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: sqyards-api
  type: ClusterIP
