sqyards/templates/fe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sqyards-fe
  name: sqyards-fe
spec:
  ports:
  - name: 8888-8888
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: sqyards-fe
  type: ClusterIP
